Added products page with functional api fetch and filtering. Changed some formating

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>eCommerce App</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
+    <script src="index.js" defer></script>
     <script
       src="https://kit.fontawesome.com/51de8b8661.js"
       crossorigin="anonymous"
@@ -16,7 +16,7 @@
       <div class="nav__container">
         <img src="assets/logo.png" alt="" class="nav__logo" />
         <div class="nav__links">
-          <a href="#" class="nav__link">Products</a>
+          <a href="products.html" class="nav__link">Products</a>
           <a href="#" class="nav__link"
             ><i class="fa-solid fa-cart-shopping nav__link__icon"></i
           ></a>
@@ -33,7 +33,9 @@
       </button>
       <div class="menu__links">
         <a href="#" class="menu__link" onclick="openMenu()">Home</a>
-        <a href="#" class="menu__link" onclick="openMenu()">Products</a>
+        <a href="products.html" class="menu__link" onclick="openMenu()"
+          >Products</a
+        >
         <a href="#" class="menu__link" onclick="openMenu()">Cart</a>
       </div>
     </nav>
